--- a/src/main/java/CalculatorGUIJava.form
+++ b/src/main/java/CalculatorGUIJava.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="586" height="349"/>
+      <xy x="20" y="20" width="586" height="397"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -66,14 +66,19 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="4796d" class="javax.swing.JTextField" binding="displayField">
+          <scrollpane id="18d29">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="100"/>
-              </grid>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="10198" class="javax.swing.JTextArea" binding="displayField">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="c5cf3" binding="keypadPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -156,14 +161,6 @@
               <text value="3"/>
             </properties>
           </component>
-          <component id="9c773" class="javax.swing.JSeparator">
-            <constraints>
-              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <visible value="false"/>
-            </properties>
-          </component>
           <component id="aec49" class="javax.swing.JSeparator">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -178,6 +175,16 @@
             </constraints>
             <properties>
               <text value="0"/>
+            </properties>
+          </component>
+          <component id="fde08" class="javax.swing.JButton" binding="clearButton" default-binding="true">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <alignmentX value="0.0"/>
+              <margin top="0" left="0" bottom="0" right="0"/>
+              <text value="Clear"/>
             </properties>
           </component>
         </children>
